fix: Desacoplar notificaciones para prevenir rollback de transacciones
El problema principal era que las aprobaciones y rechazos no se guardaban en la base de datos si el envío de notificaciones por correo fallaba (por ejemplo, en un entorno local sin credenciales de AWS).

Esto ocurría porque la llamada al notificador estaba dentro de la misma transacción `@Transactional` que la actualización de la base de datos. Una excepción en el envío del correo provocaba un rollback completo de la operación.

Esta solución implementa los siguientes cambios:

- **Manejo de Errores en RequestService:** Se envuelven las llamadas al `emailAdapter` en bloques `try-catch`. Un fallo en la notificación ahora solo registra un error en el log, permitiendo que la transacción principal (guardar el estado de la solicitud) se complete con éxito.

- **Consolidación de Interfaces:** Se estandarizó el uso de la interfaz `EmailPort` y se eliminó la interfaz duplicada `NotificationPort` para mayor claridad en la arquitectura de puertos y adaptadores.

- **Corrección de Errores de Compilación:**
  - Se solucionó un error persistente de compilación en `JwtSecurityConfig` corrigiendo la ruta de importación de `DelegatingOAuth2TokenValidator` y limpiando la configuración JWT conflictiva de los archivos `.yml`.
  - Se añadió una dependencia explícita a `spring-security-oauth2-core` en el `pom.xml` para resolver un conflicto de versiones en el entorno local.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,41 @@
 server:
   port: 8080
+
 spring:
-  application.name: bdb-approvals-back
-  jackson:
-    default-property-inclusion: non_null
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
+
+  datasource:
+    url: ${JDBC_URL}
+    username: ${JDBC_USER}
+    password: ${JDBC_PASS}
   jpa:
+    hibernate:
+      ddl-auto: update
     open-in-view: false
     properties:
-      hibernate:
-        jdbc.time_zone: UTC
-  datasource:
-    url: jdbc:h2:mem:bdbapprovals;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=TRUE
-    username: sa
-    password: sa
-  flyway:
-    enabled: true
-    locations: classpath:db/migration
-management:
-  endpoints.web.exposure.include: health,info,metrics
-  endpoint.health.probes.enabled: true
+      hibernate.jdbc.time_zone: UTC
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${OAUTH_ISSUER}
 
 app:
   security:
-    audience: ${AZ_API_AUDIENCE:api://mock}
-  notifications:
-    channel: email
-  email:
-    from: ${SES_FROM:no-reply@example.com}
+    audience: ${OAUTH_AUDIENCE}
+    mock-enabled: ${APP_SECURITY_MOCK_ENABLED:false}
 
+  cors:
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:4200}
+    allowed-methods: ${CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
+    allowed-headers: ${CORS_ALLOWED_HEADERS:Authorization,Content-Type}
 
+ses:
+  region: ${AWS_REGION}
+  from: ${SES_FROM}
+  smtp:
+    host: ${SES_SMTP_HOST}
+    username: ${SES_SMTP_USERNAME}
+    password: ${SES_SMTP_PASSWORD}
