--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,12 +9,14 @@ spring:
     url: ${JDBC_URL}
     username: ${JDBC_USER}
     password: ${JDBC_PASS}
+
   jpa:
     hibernate:
       ddl-auto: update
     open-in-view: false
     properties:
       hibernate.jdbc.time_zone: UTC
+      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 
   security:
     oauth2:
