--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>10.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>10.10.0</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- OpenAPI -->
