refactor: Limpiar configuración de seguridad y reducir duplicación
Este commit incluye varias refactorizaciones y correcciones:

- **SecurityConfig:**
  - Elimina un bean `SecurityFilterChain` duplicado que podría causar fallos en el inicio de la aplicación o un comportamiento impredecible.
  - Borra el método estático `extractUpn` que no se estaba utilizando.

- **RequestController:**
  - Reduce la duplicación de código extrayendo la lógica común para construir respuestas detalladas (`approve`/`reject`) y para mapear DTOs de resumen (`list`/`inbox`) a métodos de ayuda privados.

- **CurrentUserArgumentResolver:**
  - Mejora la legibilidad de la extracción de claims del JWT usando `Optional.or()`.

- **Configuración:**
  - Elimina la configuración redundante y no utilizada de `bdb.cors` en `application.yml` para evitar confusiones.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: ${OAUTH_ISSUER}
+          audiences: ${OAUTH_AUDIENCE}
 
 app:
   security:
@@ -41,3 +42,6 @@ ses:
     host: ${SES_SMTP_HOST}
     username: ${SES_SMTP_USERNAME}
     password: ${SES_SMTP_PASSWORD}
+bdb:
+  cors:
+    origins: "http://localhost:4200"
